minor bug fix on mobile display

--- a/src/pages/Projects/ProjectsStyling/_ProjectsLayout.scss
+++ b/src/pages/Projects/ProjectsStyling/_ProjectsLayout.scss
@@ -67,7 +67,7 @@
 @media (max-width: 385px) {
     .projects {
         margin-top: 0.2rem;
-        left: 0;
+        left: -2rem;
         top: 20vh;
         height: 76vh;
         width: 100%;
